CCE-499 : tiny alignment fix on content vs. left nav.

--- a/docs/template/public/less/_components.less
+++ b/docs/template/public/less/_components.less
@@ -21,7 +21,7 @@
 }
 
 .kss-description{
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 .kss-patterns-page .modal-dialog{
